Fixed nav on mobile at 85%

--- a/public/css/pixelup.less
+++ b/public/css/pixelup.less
@@ -282,6 +282,7 @@ table, th, td {
     }
 }
 .top-bar__layout {
+    width: 85%;
     @media @mobile-large {
         position: absolute;
         bottom: 5px;
